# config-lib

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
config_lib/: __init__.py  db.py  loader.py  parser.py  schema.py  utils.py  validator.py  writer.py
config_lib/parsers/: parser_ini.py  parser_json.py  parser_toml.py  parser_yaml.py  test_toml_parser.py
config_lib/writers/: writer_ini.py  writer_json.py  writer_toml.py  writer_yaml.py
example/: example.ini  example.json  example.toml  example.yaml  example_extra_field.json  example_main.py  example_missing_field.json
tests/: test_db.py  test_parser_ini.py  test_parser_json.py  test_parser_toml.py  test_parser_yaml.py  test_utils.py  test_validator.py  test_writer.py
